hard-gists/3778347/run.log
=== Docker Run Log for 3778347 ===
Started at: Mi 29. Okt 13:59:39 CET 2025

[2025-10-29 13:59:40] START: Running container for 3778347
[2025-10-29 13:59:40] SUCCESS: Container 4daa15e9146ad76703f876a932bf781b0f10dd7da646cd87bd224a99b8e82910 started for 3778347
=== Container logs for 3778347 ===
  File "/snippet.py", line 129
    print 'Fetched issue "%s"' % self.title
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3778347 ===
[2025-10-29 13:59:42] INFO: Container 4daa15e9146ad76703f876a932bf781b0f10dd7da646cd87bd224a99b8e82910 has stopped
